# min-trtr

./: .gitignore  LICENSE  README.md  dataset.py  model.py  onnxexp.py  onnxinf.py  t3.py
data/: dataset_test.txt  dataset_train.txt  vocab_source.txt  vocab_target.txt
infer/: Cargo.toml
infer/examples/: infer.rs
infer/examples/android/: Cargo.toml  main.rs  run.bat  run.sh
infer/src/: error.rs  infer.rs  lib.rs  token.rs
