[package]
name = "min-trtr"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream="0.3.6"
futures-util = "0.3.32"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
fancy-regex ="0.17.0"

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.49.0",features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["examples/android"]
resolver = "3"
