[package]
name = "min-trtr"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream="0.3.6"
futures-util = "0.3.32"
ndarray = "0.17.2"
ort = "2.0.0-rc.12"
fancy-regex ="0.18.0"
tokio = {version = "1.52.1", features = ["fs"]}

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.1",features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["examples/android"]
resolver = "3"
