[package]
name = "min-trtr-android"
version = "0.1.0"
edition = "2024"

[package.metadata.android]
apk_name = "min-trtr"
use_aapt2 = true
runtime_libs = "libs"

[package.metadata.android.signing.release]
path = "app.jks"
keystore_password = "123456"

[lib]
path = "main.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = {version = "1.45.0", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
mobile-entry-point = "0.1.1"

[dependencies.min-trtr]
path = "../../"